--- a/1. TwoSum/TwoSum.csproj
+++ b/1. TwoSum/TwoSum.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_1._TwoSum</RootNamespace>
+    <RootNamespace>TwoSum</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
