--- a/LeetCodeSolutions/Palindrome Number.csproj
+++ b/LeetCodeSolutions/Palindrome Number.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+	  <RootNamespace>PalindromeNumber</RootNamespace>
+	  <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
